# backend/swagger.yaml
@@ -1,3 +1,169 @@
+# swagger: "2.0"
+# info:
+#   title: Bank Argent API documentation
+#   description: Contains all available API endpoints in this codebase
+#   version: "1.0.0"
+#   termsOfService: "http://swagger.io/terms/"
+# host: localhost:3001
+# basePath: /api/v1
+# schemes:
+#   - http
+# paths:
+#   /user/login:
+#     post:
+#       tags:
+#         - User Module
+#       summary: Login
+#       description: API for Login
+#       parameters:
+#         - in: body
+#           name: body
+#           description: Login Payload
+#           required: true
+#           schema:
+#             $ref: "#/definitions/Login"
+#       produces:
+#         - application/json
+#       responses:
+#         "200":
+#           description: Login Successfully
+#           schema:
+#             $ref: "#/definitions/LoginResponse"
+#         "400":
+#           description: Invalid Fields
+#         "500":
+#           description: Internal Server Error
+#   /user/signup:
+#     post:
+#       tags:
+#         - User Module
+#       summary: Signup
+#       description: API for Signup
+#       parameters:
+#         - in: body
+#           name: body
+#           description: Signup Payload
+#           required: true
+#           schema:
+#             $ref: "#/definitions/User"
+#       produces:
+#         - application/json
+#       responses:
+#         "200":
+#           description: Signup Successfully
+#           schema:
+#             $ref: "#/definitions/ApiResponse"
+#         "400":
+#           description: Invalid Fields
+#         "500":
+#           description: Internal Server Error
+#   /user/profile:
+#     get:
+#       security:
+#         - Bearer: []
+#       tags:
+#         - User Module
+#       summary: User Profile API
+#       description: API for fetching a user profile
+#       #produces:
+#       # - application/json
+#       responses:
+#         "200":
+#           description: User profile retrieved successully
+#           schema:
+#             $ref: "#/definitions/ApiResponse"
+#         "400":
+#           description: Invalid Fields
+#         "500":
+#           description: Internal Server Error
+#     put:
+#       security:
+#         - Bearer: []
+#       tags:
+#         - User Module
+#       summary: User Profile API
+#       description: API for updating a user profile
+#       parameters:
+#         - in: body
+#           name: body
+#           description: Update user profile attributes
+#           required: true
+#           schema:
+#             $ref: "#/definitions/UserProfile"
+#       produces:
+#         - application/json
+#       responses:
+#         "200":
+#           description: User profile retrieved successully
+#           schema:
+#             $ref: "#/definitions/ApiResponse"
+#         "400":
+#           description: Invalid Fields
+#         "500":
+#           description: Internal Server Error
+# securityDefinitions:
+#   Bearer:
+#     type: apiKey
+#     name: Authorization
+#     in: header
+# definitions:
+#   User:
+#     properties:
+#       email:
+#         type: string
+#         description: user email
+#       password:
+#         type: string
+#         description: user password
+#       firstName:
+#         type: string
+#         description: user first name
+#       lastName:
+#         type: string
+#         description: user last name
+#       userName:
+#         type: string
+#         description: user public name
+#   Login:
+#     properties:
+#       email:
+#         type: string
+#         description: user email
+#       password:
+#         type: string
+#         description: user password
+#   ApiResponse:
+#     type: object
+#     properties:
+#       status:
+#         type: integer
+#       message:
+#         type: string
+#       body:
+#         type: object
+#         properties:
+#           id:
+#             type: string
+#           email:
+#             type: string
+#           # Ajout personnel
+#           firstName:
+#             type: string
+#           lastName:
+#             type: string
+#           userName:
+#             type: string
+#           # fin
+#   LoginResponse:
+#     type: object
+#     properties:
+#       token:
+#         type: string
+#   UserProfile:
+#     type: object
+#     properties:
+#       userName:
+#         type: string
 swagger: "2.0"
 info:
   title: Bank Argent API documentation
@@ -14,7 +180,7 @@ paths:
       tags:
         - User Module
       summary: Login
-      description: API for Login
+      description: API for user login
       parameters:
         - in: body
           name: body
@@ -26,19 +192,19 @@ paths:
         - application/json
       responses:
         "200":
-          description: Login Successfully
+          description: Login successfully
           schema:
             $ref: "#/definitions/LoginResponse"
         "400":
-          description: Invalid Fields
+          description: Invalid fields (e.g., user not found, invalid password)
         "500":
-          description: Internal Server Error
+          description: Internal server error
   /user/signup:
     post:
       tags:
         - User Module
       summary: Signup
-      description: API for Signup
+      description: API for user signup
       parameters:
         - in: body
           name: body
@@ -50,39 +216,37 @@ paths:
         - application/json
       responses:
         "200":
-          description: Signup Successfully
+          description: Signup successfully
           schema:
             $ref: "#/definitions/ApiResponse"
         "400":
-          description: Invalid Fields
+          description: Invalid fields (e.g., email already exists)
         "500":
-          description: Internal Server Error
+          description: Internal server error
   /user/profile:
     get:
       security:
         - Bearer: []
       tags:
         - User Module
-      summary: User Profile API
+      summary: Get user profile
       description: API for fetching a user profile
-      #produces:
-      # - application/json
       responses:
         "200":
-          description: User profile retrieved successully
+          description: User profile retrieved successfully
           schema:
             $ref: "#/definitions/ApiResponse"
         "400":
-          description: Invalid Fields
+          description: Invalid fields
         "500":
-          description: Internal Server Error
+          description: Internal server error
     put:
       security:
         - Bearer: []
       tags:
         - User Module
-      summary: User Profile API
-      description: API for updating a user profile
+      summary: Update user profile
+      description: API for updating user profile attributes
       parameters:
         - in: body
           name: body
@@ -94,13 +258,13 @@ paths:
         - application/json
       responses:
         "200":
-          description: User profile retrieved successully
+          description: User profile updated successfully
           schema:
             $ref: "#/definitions/ApiResponse"
         "400":
-          description: Invalid Fields
+          description: Invalid fields
         "500":
-          description: Internal Server Error
+          description: Internal server error
 securityDefinitions:
   Bearer:
     type: apiKey
@@ -108,30 +272,32 @@ securityDefinitions:
     in: header
 definitions:
   User:
+    type: object
     properties:
       email:
         type: string
-        description: user email
+        description: User email
       password:
         type: string
-        description: user password
+        description: User password
       firstName:
         type: string
-        description: user first name
+        description: User first name
       lastName:
         type: string
-        description: user last name
+        description: User last name
       userName:
         type: string
-        description: user public name
+        description: User public name
   Login:
+    type: object
     properties:
       email:
         type: string
-        description: user email
+        description: User email
       password:
         type: string
-        description: user password
+        description: User password
   ApiResponse:
     type: object
     properties:
@@ -146,14 +312,12 @@ definitions:
             type: string
           email:
             type: string
-          # Ajout personnel
           firstName:
             type: string
           lastName:
             type: string
           userName:
             type: string
-          # fin
   LoginResponse:
     type: object
     properties:
